Some change, text to icon from font awesome // change update files capture to get it from the input directly

--- a/front-end/groupomania/src/assets/scss/main.scss
+++ b/front-end/groupomania/src/assets/scss/main.scss
@@ -4,6 +4,10 @@ $secondary-color: #fcd7d7;
 $tertiary-color: white;
 
 $shadow-color: #b08e8e;
+$generic-gradient-primary-color: #6F4B97;
+$spot-color-primary: #6AB4DD;
+$complementary-primary-color: #00AB6D;
+$complementary-secondary-color: #02F79F;
 
 /*----------  Mixins ----------*/
 @mixin center {
