--- a/front-end/groupomania/src/assets/scss/main.scss
+++ b/front-end/groupomania/src/assets/scss/main.scss
@@ -15,3 +15,50 @@ $complementary-secondary-color: #02F79F;
     align-items: center;
     justify-content: center;
 }
+/*----------  GENERAL USE ----------*/
+.awesome__icon{
+    color: $primary-color;
+    font-weight: bold;
+    font-size: 1rem;
+    height: 2.5rem;
+    width: 2.5rem;
+    padding: 5px;
+    margin: 5px;
+    border: 4px solid #f72d02;
+    border-radius: 10px;
+    cursor: pointer;
+    transition:all .3s;
+    &:hover{
+      color: $primary-color;
+      transform: scale(1.1, 1.1);
+      border: 3px solid $primary-color;
+    }
+    &:active{
+    color: $primary-color;
+    transform: scale(.8, .8);
+    border: 2px solid $primary-color;
+    }
+    &:focus{
+      color: black;
+      transform: scale(.9, .9);
+      border: 2px solid black;
+    }
+  }
+  
+.green{
+color: $complementary-primary-color;
+border: 3px solid $complementary-primary-color;
+&:hover{
+    color: $complementary-secondary-color;
+    border: 3px solid $complementary-secondary-color;
+}
+&:active{
+    color: $generic-gradient-primary-color;
+    border: 3px solid $generic-gradient-primary-color;
+}
+&:focus{
+    color: $generic-gradient-primary-color;
+    transform: scale(.8, .8);
+    border: 3px solid $generic-gradient-primary-color;
+}
+}
